# ChangeLog for dev-python/atomize
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Jan 2012; James Rowe <jnrowe@gmail.com> -atomize-0.1.0.ebuild,
  atomize-0.1.1.ebuild:
  Keyworded x86.

  20 Jan 2012; James Rowe <jnrowe@gmail.com> atomize-0.1.1.ebuild:
  Keyworded amd64.

*atomize-0.1.1 (21 Dec 2011)

  21 Dec 2011; James Rowe <jnrowe@gmail.com> +atomize-0.1.1.ebuild:
  Version bump [495].

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  01 Aug 2011; James Rowe <jnrowe@gmail.com> atomize-0.1.0.ebuild:
  Keyworded x86.

  29 Jul 2011; James Rowe <jnrowe@gmail.com> atomize-0.1.0.ebuild:
  Keyworded amd64.

  02 Jul 2011; James Rowe <jnrowe@gmail.com> atomize-0.1.0.ebuild:
  Keyworded ~x86.

*atomize-0.1.0 (29 Jun 2011)

  29 Jun 2011; James Rowe <jnrowe@gmail.com> +atomize-0.1.0.ebuild,
  +metadata.xml, +watch:
  Initial ebuild, by me [409].
