@@ -5,7 +5,7 @@ DIST atomize-0.1.1.tar.gz 5218 RMD160 dda93e33225ff7c2a603cf5db0a27fd43ceb5f20 S
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk8Z7icACgkQzJrj3cAXR0mXZQCfWYlBVY5L2Sn7ZX6fTCNxNYzX
-kDMAoI+8aH0MWMSNng9T/7gVZwr+C0dU
-=WJvo
+iEYEAREKAAYFAk9SPV0ACgkQzJrj3cAXR0nEPwCeIdLL8kXecrlUAh5/qUsvZK0x
+5jYAoICmyr0xHJdrIA5TJ/GUGWTINEIO
+=fu/o
 -----END PGP SIGNATURE-----
