@@ -2,6 +2,9 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  03 Mar 2012; James Rowe <jnrowe@gmail.com> atomize-0.1.1.ebuild:
+  Removed Python 2.4 support.
+
   20 Jan 2012; James Rowe <jnrowe@gmail.com> -atomize-0.1.0.ebuild,
   atomize-0.1.1.ebuild:
   Keyworded x86.
